--- a/Code/Basic2026-01/BotEmulation/BotEmulation.csproj
+++ b/Code/Basic2026-01/BotEmulation/BotEmulation.csproj
@@ -15,4 +15,8 @@
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TelegramBotLib\TelegramBotLib.csproj" />
+  </ItemGroup>
+
 </Project>
